examples/test/testpolicy16157.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16157
  namespace: namespace366
spec:
  podSelector:
    matchLabels:
      key44: value45
      key42: value43
      key45: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value15
          key3: value14
          key42: value21
      podSelector:
        matchLabels:
          key19: value10
          key0: value16
          key28: value21
